MIT-110: Fix header alignment, horizontal scrolling.

--- a/components/app/base.css
+++ b/components/app/base.css
@@ -4,12 +4,14 @@ body {
   font-family: $sans;
   font-size: 1rem;
   line-height: 1.231;
-  max-width: 100vw;
-  width: 100%;
   -moz-osx-font-smoothing: grayscale;
   -ms-overflow-style: -ms-autohiding-scrollbar;
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
+}
+
+html {
+  position: relative;
 }
 
 ::selection {
@@ -163,7 +165,7 @@ mark {
   background-color: #ff9;
   color: #000;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 del {
@@ -183,7 +185,6 @@ table {
 
 hr {
   border-top: 1px solid #cccccc;
-  border: 0;
   display: block;
   height: 1px;
   margin: 1em 0;
@@ -248,7 +249,7 @@ small {
 
 strong,
 th {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 td,
@@ -257,13 +258,13 @@ td img {
 }
 
 sub {
-  vertical-align: sub;
   font-size: smaller;
+  vertical-align: sub;
 }
 
 sup {
-  vertical-align: super;
   font-size: smaller;
+  vertical-align: super;
 }
 
 textarea {
